Fix for title bar on Safari browsers
Titles of elements like charts, when too long, are cropped and display
an ellipsis at the end of the text. On Safari browsers this ellipsis is
not appearing.

Safari's `text-overflow: ellipsis` property works correctly, but when
used in conjunction with `writing-mode: vertical-rl`, apparently it
fails to display the ellipsis.

Fixes #764.

--- a/packages/react-components/style/output-components-style.css
+++ b/packages/react-components/style/output-components-style.css
@@ -35,8 +35,19 @@
     justify-self: center;
     cursor: move;
     overflow: hidden;
-    text-overflow: ellipsis;
     white-space: nowrap;
+    position: relative;
+    background: inherit;
+}
+.custom-ellipsis {
+    position: absolute;
+    z-index: 1;
+    background-color: inherit;
+    height: 15px;
+    bottom: 0;
+}
+.hidden-ellipsis {
+    display: none;
 }
 .title-bar-label:hover {
     background-color: var(--theia-list-hoverBackground); 
